--- a/blog/src/app/components/small-card/small-card.component.html
+++ b/blog/src/app/components/small-card/small-card.component.html
@@ -2,12 +2,12 @@
   <div class="container__small-card-content">
     <div class="small-card__picture">
       <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIRNgOEIkIKV1qsSELV_ToIKn6CbMqnIKlQb9kdVQ-HY2FOmPGf83CurRKacgrKGhMTKs&usqp=CAU"
+        src= {{photoCover}}
         alt=""
       />
     </div>
     <div class="small-card__title">
-      <h1><a href="">Projeto Angular no jeitinho brasileiro </a></h1>
+      <h1> <a [routerLink]="['content']"> {{ cardTitle }}  </a> </h1>
     </div>
   </div>
   <div class="container__small-card__separator">
