--- a/blog/src/app/pages/home/home.component.html
+++ b/blog/src/app/pages/home/home.component.html
@@ -1,16 +1,33 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
-
 <app-menu-title> </app-menu-title>
+
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+    Id="1"
+    photoCover="https://www.hostinger.com.br/tutoriais/wp-content/uploads/sites/12/2019/11/O-Que-%C3%A9-Angular-Guia-para-Iniciantes.png"
+    cardTitle="Projeto Angular"
+    cardDescription="Um pouco sobre o projeto realizado em um bootcamp da DIO sobre a framework Angular."
+    >
+  </app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+    Id="2"
+    cardTitle="Projeto Angular"
+    photoCover="https://picx.zhimg.com/v2-65faa0140ab194d7e4441100fca1a4a6_1440w.jpg?source=172ae18b"
+    >
+    </app-small-card>
+    <app-small-card
+    Id="3"
+    photoCover="https://vue-community.org/wp-content/uploads/2023/04/22.png"
+    cardTitle="Projeto VueJs"
+    >
+    </app-small-card>
+    <app-small-card
+    photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy-iSjargQK96hMNq0U_FRE1BxpR1stSTrxBRFS41b0g4fjG8oF9sjFKqdlRY_PnodRY8&usqp=CAU"
+    cardTitle="Projeto React"
+    >
+
+    </app-small-card>
   </div>
 </div>
